--- a/lt/about_us.html
+++ b/lt/about_us.html
@@ -1,76 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inkarelis</title>
-  <link rel="stylesheet" href="../css/about_us.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet" />
-  <script src="../js/main.js" defer></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inkarelis</title>
+    <link rel="stylesheet" href="../css/about_us.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
+    <script src="../js/main.js" defer></script>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header_container">
-            <div class="header_content">
-                <a href="../lt/index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
-                <div class="menu-icon">&#9776;</div>
-                <div class="nav_wrapper">
-                    <nav class="links">
-                        <div class="dropdown">
-                            <a href="../lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
-                            <div class="dropdown_content">
-                                <a href="../lt/about_us.html">Studija</a>
-                                <a href="../lt/teachers.html">Mokytojai</a>
-                            </div>
-                        </div>
-                        <a href="../lt/schedule.html" class="Tvarkaraščiai">Tvarkaraščiai</a>
-                        <a href="../lt/prices.html" class="Kainos">Kainos</a>
-                        <a href="../lt/schedule.html" class="Kontaktai">Kontaktai</a>
-                        <a href="../en/about_us.html" class="LT">LT</a>
-                    </nav>
-                    <a href="../lt/registration.html">
-                        <button class="registracija">Registracija</button>
-                    </a>
-                </div>               
-            </div>
+      <div class="header_container">
+        <div class="header_content">
+          <a href="index.html"
+            ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
+          /></a>
+          <div class="menu-icon">&#9776;</div>
+          <div class="nav_wrapper">
+            <nav class="links">
+              <div class="dropdown">
+                <a href="../lt/about_us.html" class="apie_mus" tabindex="0"
+                  >Apie mus</a
+                >
+                <div class="dropdown_content">
+                  <a href="../lt/about_us.html">Studija</a>
+                  <a href="../lt/teachers.html">Mokytojai</a>
+                </div>
+              </div>
+              <a href="../lt/schedule.html" class="Tvarkaraščiai"
+                >Tvarkaraščiai</a
+              >
+              <a href="../lt/prices.html" class="Kainos">Kainos</a>
+              <a href="../lt/schedule.html" class="Kontaktai">Kontaktai</a>
+              <a href="../en/about_us.html" class="LT">LT</a>
+            </nav>
+            <a href="../lt/registration.html">
+              <button class="registracija">Registracija</button>
+            </a>
+          </div>
         </div>
+      </div>
     </header>
     <div class="off-screen-menu">
-        <ul class="main-menu">
-          <li><a href="#" class="open-apie-mus">Apie mus</a></li>
-          <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
-          <li><a href="../lt/prices.html">Kainos</a></li>
-          <li><a href="../lt/contact.html">Kontaktai</a></li>
-          <li><a href="../en/teachers.html">LT</a></li>
-        </ul>
-        <ul class="apie-mus-menu">
-          <li><a href="#" class="back-to-main">← Atgal</a></li>
-          <li><a href="../lt/about_us.html">Studija</a></li>
-          <li><a href="../lt/teachers.html">Mokytojai</a></li>
-        </ul>
+      <ul class="main-menu">
+        <li><a href="#" class="open-apie-mus">Apie mus</a></li>
+        <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+        <li><a href="../lt/prices.html">Kainos</a></li>
+        <li><a href="../lt/contact.html">Kontaktai</a></li>
+        <li><a href="../en/teachers.html">LT</a></li>
+      </ul>
+      <ul class="apie-mus-menu">
+        <li><a href="#" class="back-to-main">← Atgal</a></li>
+        <li><a href="../lt/about_us.html">Studija</a></li>
+        <li><a href="../lt/teachers.html">Mokytojai</a></li>
+      </ul>
     </div>
 
-  <section id="about_us_section">
-    <div class="about_us_container_first">
-      <div class="about_us_content">
-        <h3>Inkarėlis</h3>
-        <h1>Apie mus</h1>
-        <p>Studija „Inkarėlis“ yra viena iš ilgiausiai gyvuojančių šokių studijų Klaipėdoje, pradėjusi savo veiklą prieš daugiau nei 50 metų. Skaičiuodama ilgus gyvavimo metus, studija "Inkarėlis" gali pasidžiaugti savo pasiekimais ir išugdytais talentais. </p>
+    <section id="about_us_section">
+      <div class="about_us_container_first">
+        <div class="about_us_content">
+          <h3>Inkarėlis</h3>
+          <h1>Apie mus</h1>
+          <p>
+            Studija „Inkarėlis“ yra viena iš ilgiausiai gyvuojančių šokių
+            studijų Klaipėdoje, pradėjusi savo veiklą prieš daugiau nei 50 metų.
+            Skaičiuodama ilgus gyvavimo metus, studija "Inkarėlis" gali
+            pasidžiaugti savo pasiekimais ir išugdytais talentais.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="about_us_container_second">
+      <div class="about_us_container_second">
         <div class="about_us_photo">
-            <img src="../images/mokytojai 1.png">
+          <img src="../images/mokytojai 1.png" />
         </div>
         <div class="about_us_text">
           <h3>Veiklos ir užsiėmimai</h3>
-          <p>Studijoje rasite sau tinkamą užsiėmimą, nepriklausomai nuo amžiaus ar patirties lygio. Šiuo metu daugiau negu 200 mokinių reguliariai lanko grupines pamokas, kurias veda profesionalių ir patyrusių trenerių komanda.</p>
+          <p>
+            Studijoje rasite sau tinkamą užsiėmimą, nepriklausomai nuo amžiaus
+            ar patirties lygio. Šiuo metu daugiau negu 200 mokinių reguliariai
+            lanko grupines pamokas, kurias veda profesionalių ir patyrusių
+            trenerių komanda.
+          </p>
           <h3>Misija</h3>
-          <p>Mūsų misija - ugdyti talentą ir kūrybiškumą, teikiant aukštos kokybės šokio pamokas įtraukiančioje ir draugiškoje aplinkoje.</p>
+          <p>
+            Mūsų misija - ugdyti talentą ir kūrybiškumą, teikiant aukštos
+            kokybės šokio pamokas įtraukiančioje ir draugiškoje aplinkoje.
+          </p>
         </div>
         <div class="about_us_text">
           <h3>Papildomos veiklos</h3>
@@ -80,60 +105,86 @@
             <li>Išvykos</li>
             <li>Vasaros poilsio veiklos</li>
           </ul>
-          <p>Visa tai skirta tam, kad kiekvienas mokinys ne tik tobulėtų, bet ir patirtų įsimintinų bei džiaugsmingų akimirkų kelionės eigoje.</p>
+          <p>
+            Visa tai skirta tam, kad kiekvienas mokinys ne tik tobulėtų, bet ir
+            patirtų įsimintinų bei džiaugsmingų akimirkų kelionės eigoje.
+          </p>
         </div>
         <div class="about_us_photo">
-          <img src="../images/IMG_8607 1.png">
+          <img src="../images/IMG_8607 1.png" />
         </div>
       </div>
-  </section>
+    </section>
 
-  <footer>
-    <div class="footer_container">
-      <div class="footer_content">
-        <div class="footer_column">
-          <a href="../lt/index.html"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white" /></a>
-          <div class="footer_paragraph">
-            <p>Choreografijos studija „Inkarėlis“ – šokių studija pietinėje Klaipėdos miesto dalyje – siūlo mokiniams įvairaus šokių stiliaus užsiėmimus.</p>
+    <footer>
+      <div class="footer_container">
+        <div class="footer_content">
+          <div class="footer_column">
+            <a href="index.html"
+              ><img
+                class="logo_white"
+                src="../images/Inkarelis 2.png"
+                alt="logotipas_white"
+            /></a>
+            <div class="footer_paragraph">
+              <p>
+                Choreografijos studija „Inkarėlis“ – šokių studija pietinėje
+                Klaipėdos miesto dalyje – siūlo mokiniams įvairaus šokių
+                stiliaus užsiėmimus.
+              </p>
+            </div>
+            <div class="social_logos">
+              <a
+                target="_blank"
+                href="https://www.instagram.com/inkarelistudio/"
+                ><img
+                  class="instagram"
+                  src="../images/Instagram.png"
+                  alt="instagram"
+              /></a>
+              <a
+                target="_blank"
+                href="https://www.facebook.com/choreografijosstudija.inkarelis?locale=lt_LT"
+                ><img
+                  class="facebook"
+                  src="../images/Facebook.png"
+                  alt="facebook"
+              /></a>
+            </div>
           </div>
-          <div class="social_logos">
-            <a target="_blank" href="https://www.instagram.com/inkarelistudio/"><img class="instagram" src="../images/Instagram.png" alt="instagram" /></a>
-            <a target="_blank" href="https://www.facebook.com/choreografijosstudija.inkarelis?locale=lt_LT"><img class="facebook" src="../images/Facebook.png" alt="facebook" /></a>
+
+          <div class="footer_column">
+            <h2>Naršyti</h2>
+            <ul>
+              <li><a href="../lt/about_us.html">Šokių studija</a></li>
+              <li>
+                <a href="index.html#sokiu_stiliai_section">Šokių stiliai</a>
+              </li>
+              <li><a href="../lt/teachers.html">Mokytojai</a></li>
+              <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
+              <li><a href="../lt/prices.html">Kainos</a></li>
+              <li><a href="../lt/registration.html">Registracija</a></li>
+            </ul>
+          </div>
+
+          <div class="footer_column">
+            <h2>Kontaktai</h2>
+            <p>+370 463 24489</p>
+            <p>+370 462 21906</p>
+            <p>inkarelis@kkljc.lt</p>
+          </div>
+
+          <div class="footer_column">
+            <h2>Laukininkų g. 13, Klaipėda</h2>
+            <img src="../images/Lt_map.png" alt="Map" class="map" />
           </div>
         </div>
 
-        <div class="footer_column">
-          <h2>Naršyti</h2>
-          <ul>
-            <li><a href="../lt/about_us.html">Šokių studija</a></li>
-            <li><a href="../lt/index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
-            <li><a href="../lt/teachers.html">Mokytojai</a></li>
-            <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
-            <li><a href="../lt/prices.html">Kainos</a></li>
-            <li><a href="../lt/registration.html">Registracija</a></li>
-          </ul>
-        </div>
-
-        <div class="footer_column">
-          <h2>Kontaktai</h2>
-          <p>+370 463 24489</p>
-          <p>+370 462 21906</p>
-          <p>inkarelis@kkljc.lt</p>
-        </div>
-
-        <div class="footer_column">
-          <h2>Laukininkų g. 13, Klaipėda</h2>
-          <img src="../images/Lt_map.png" alt="Map" class="map" />
+        <div class="footer_bottom">
+          <hr />
+          <p class="copyright">Šokių studija „Inkarėlis“ © 2025.</p>
         </div>
       </div>
-
-      <div class="footer_bottom">
-        <hr />
-        <p class="copyright">
-          Šokių studija „Inkarėlis“ © 2025.
-        </p>
-      </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
