--- a/lt/prices.html
+++ b/lt/prices.html
@@ -22,7 +22,7 @@
     <header>
       <div class="header_container">
         <div class="header_content">
-          <a href="../lt/index.html"
+          <a href="index.html"
             ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
@@ -94,7 +94,7 @@
       <div class="footer_container">
         <div class="footer_content">
           <div class="footer_column">
-            <a href="../lt/index.html"
+            <a href="index.html"
               ><img
                 class="logo_white"
                 src="../images/Inkarelis 2.png"
@@ -132,7 +132,7 @@
             <ul>
               <li><a href="../lt/about_us.html">Šokių studija</a></li>
               <li>
-                <a href="../lt/index.html#sokiu_stiliai_section"
+                <a href="index.html#sokiu_stiliai_section"
                   >Šokių stiliai</a
                 >
               </li>
