--- a/lt/registration.html
+++ b/lt/registration.html
@@ -22,7 +22,7 @@
     <header>
       <div class="header_container">
         <div class="header_content">
-          <a href="../lt/index.html"
+          <a href="index.html"
             ><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"
           /></a>
           <div class="menu-icon">&#9776;</div>
@@ -40,7 +40,7 @@
               <a href="../lt/schedule.html" class="Tvarkaraščiai">Tvarkaraščiai</a>
               <a href="../lt/prices.html" class="Kainos">Kainos</a>
               <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
-              <a href="../en/index.html" class="LT">LT</a>
+              <a href="../en/registration.html" class="LT">LT</a>
             </nav>
             <a href="../lt/registration.html" class="header_btn">Registracija</a>
           </div>
@@ -54,7 +54,7 @@
         <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
         <li><a href="../lt/prices.html">Kainos</a></li>
         <li><a href="../lt/contact.html">Kontaktai</a></li>
-        <li><a href="../en/index.html">LT</a></li>
+        <li><a href="../en/registration.html">LT</a></li>
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Atgal</a></li>
@@ -105,7 +105,7 @@
       <div class="footer_container">
         <div class="footer_content">
           <div class="footer_column">
-            <a href="../lt/index.html"
+            <a href="index.html"
               ><img
                 class="logo_white"
                 src="../images/Inkarelis 2.png"
@@ -142,7 +142,7 @@
             <h2>Naršyti</h2>
             <ul>
               <li><a href="../lt/about_us.html">Šokių studija</a></li>
-              <li><a href="../lt/index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
+              <li><a href="index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
               <li><a href="../lt/teachers.html">Mokytojai</a></li>
               <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
               <li><a href="../lt/prices.html">Kainos</a></li>
