--- a/index.html
+++ b/index.html
@@ -32,9 +32,21 @@
           <div class="nav_wrapper">
             <nav class="links">
               <div class="dropdown">
-                <a href="lt/about_us.html" class="apie_mus" tabindex="0"
-                  >Apie mus</a
-                >
+                <a href="lt/about_us.html" class="apie_mus" tabindex="0">
+                  Apie mus
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="nav-chevron"
+                    width="16"
+                    height="16"
+                    viewBox="0 0 24 24"
+                    fill="white"
+                    style="vertical-align: middle"
+                  >
+                    <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
+                  </svg>
+                </a>
+
                 <div class="dropdown_content">
                   <a href="lt/about_us.html">Studija</a>
                   <a href="lt/teachers.html">Mokytojai</a>
