--- a/lt/contact.html
+++ b/lt/contact.html
@@ -29,9 +29,19 @@
           <div class="nav_wrapper">
             <nav class="links">
               <div class="dropdown">
-                <a href="../lt/about_us.html" class="apie_mus" tabindex="0"
-                  >Apie mus</a
-                >
+                <a href="../lt/about_us.html" class="apie_mus" tabindex="0">
+                  Apie mus
+                  <svg
+                    class="chevron-down"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    width="14"
+                    height="14"
+                    style="fill: black; vertical-align: middle"
+                  >
+                    <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
+                  </svg>
+                </a>
                 <div class="dropdown_content">
                   <a href="../lt/about_us.html">Studija</a>
                   <a href="../lt/teachers.html">Mokytojai</a>
@@ -182,9 +192,7 @@
             <ul>
               <li><a href="../lt/about_us.html">Šokių studija</a></li>
               <li>
-                <a href="../index.html#sokiu_stiliai_section"
-                  >Šokių stiliai</a
-                >
+                <a href="../index.html#sokiu_stiliai_section">Šokių stiliai</a>
               </li>
               <li><a href="../lt/teachers.html">Mokytojai</a></li>
               <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
