--- a/lt/teacher_3.html
+++ b/lt/teacher_3.html
@@ -29,18 +29,27 @@
           <div class="nav_wrapper">
             <nav class="links">
               <div class="dropdown">
-                <a
-                  href="../lt/about_us.html"
-                  class="apie_mus"
-                  tabindex="0"
-                  >Apie mus</a
-                >
+                <a href="../lt/about_us.html" class="apie_mus" tabindex="0">
+                  Apie mus
+                  <svg
+                    class="chevron-down"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    width="14"
+                    height="14"
+                    style="fill: black; vertical-align: middle"
+                  >
+                    <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
+                  </svg>
+                </a>
                 <div class="dropdown_content">
                   <a href="../lt/about_us.html">Studija</a>
                   <a href="../lt/teachers.html">Mokytojai</a>
                 </div>
               </div>
-              <a href="../lt/schedule.html" class="Tvarkaraščiai">Tvarkaraščiai</a>
+              <a href="../lt/schedule.html" class="Tvarkaraščiai"
+                >Tvarkaraščiai</a
+              >
               <a href="../lt/prices.html" class="Kainos">Kainos</a>
               <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
               <a href="../en/teachers.html" class="LT">LT</a>
@@ -145,7 +154,9 @@
             <h2>Naršyti</h2>
             <ul>
               <li><a href="../lt/about_us.html">Šokių studija</a></li>
-              <li><a href="../index.html#sokiu_stiliai_section">Šokių stiliai</a></li>
+              <li>
+                <a href="../index.html#sokiu_stiliai_section">Šokių stiliai</a>
+              </li>
               <li><a href="../lt/teachers.html">Mokytojai</a></li>
               <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
               <li><a href="../lt/prices.html">Kainos</a></li>
