--- a/lt/prices.html
+++ b/lt/prices.html
@@ -63,19 +63,7 @@
     </header>
     <div class="off-screen-menu">
       <ul class="main-menu">
-        <li>
-          <a href="#" class="open-apie-mus">Apie mus</a>
-          <svg
-            class="chevron-down"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            width="14"
-            height="14"
-            style="fill: black; vertical-align: middle"
-          >
-            <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
-          </svg>
-        </li>
+        <li><a href="#" class="open-apie-mus">Apie mus</a></li>
         <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
         <li><a href="../lt/prices.html">Kainos</a></li>
         <li><a href="../lt/contact.html">Kontaktai</a></li>
